--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    {% tailwind_css %}
+    <link rel="stylesheet" href="/minihospital/static/css/styles.css">
 </head>
 <body>
 
@@ -46,27 +46,5 @@
     {% block content %}
     {% endblock %}
 
-    <div class="w-[1440px] h-[1566px] bg-red">
-        <div class="w-[172px] h-[50px] bg-gradient-to-r from-[#5280e2] to-[#15cdcb] rounded-full justify-center">
-            <div class="text-white text-base font-normal font-['Kanit']">คุณ ณัฏฐณิชา</div>
-        </div>
-        <div class="left-[1300px] top-[42px] absolute text-white text-base font-normal font-['Kanit']">คุณ ณัฏฐณิชา </div>
-        <img class="w-[22px] h-[22px] left-[846px] top-[43px] absolute" src="https://via.placeholder.com/22x22" />
-        <img class="w-[22px] h-[22px] left-[747px] top-[42px] absolute" src="https://via.placeholder.com/22x22" />
-        <div class="left-[1130px] top-[44px] absolute">
-          <div class="left-[25px] top-0 absolute text-[#494949] text-base font-normal font-['Kanit']">ติดต่อเรา</div>
-          <img class="w-[22px] h-[22px] left-0 top-[23px] absolute" src="https://via.placeholder.com/22x22" />
-        </div>
-        <div class="left-[873px] top-[44px] absolute text-[#494949] text-base font-normal font-['Kanit']">ค้นหาแพทย์</div>
-        <div class="left-[774px] top-[43px] absolute text-[#494949] text-base font-normal font-['Kanit']">หน้าแรก</div>
-        <div class="left-[987px] top-[43px] absolute">
-          <div class="left-[26px] top-0 absolute text-[#494949] text-base font-normal font-['Kanit']">คิวพบแพทย์</div>
-          <img class="w-[22px] h-[22px] left-0 top-[1px] absolute" src="https://via.placeholder.com/22x22" />
-        </div>
-    </div>
-
 </body>
-{% if settings.DEBUG %}
-<script src="http://localhost:8000/__reload__/reload.js"></script>
-{% endif %}
 </html>
