--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="container-full">
 
     {% block nav %}
     {% if request.path == '/hopelife/' or request.path == '/contact/' %}
         <nav class="bg-white shadow-md">
-            <div class="container-full mx-5 px-6 py-3 flex justify-between items-center ">
+            <div class="mx-5 px-6 py-3 flex justify-between items-center ">
                 <div class="">
                     logo
                 </div>
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </nav>
-    {% elif request.path == '/contact/' %}
+    {% else %}
         <nav class="bg-white shadow-md">
             <div class="container-full mx-5 px-6 py-3 flex justify-between items-center ">
                 <div class="">
