--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -9,36 +9,36 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="container-full">
+<body class="container-full h-screen w-screen overflow-x-hidden">
 
     {% block nav %}
-    {% if request.path == '/hopelife/' or request.path == '/contact/' %}
-        <nav class="bg-white shadow-md">
+    {% if request.path == '/hopelife/' or request.path == '/hopelife/contact/' %}
+        <nav class="bg-transparent fixed w-full">
             <div class="mx-5 px-6 py-3 flex justify-between items-center ">
-                <div class="">
+                <div class="text-white">
                     logo
                 </div>
                 <div class="flex space-x-9">
                     <div class="flex items-center space-x-9">
 
                         <div class="flex space-x-3 ">
-                            <img src="{% static 'image/home.png' %}" width="22" height="22">
-                            <a href="{% url 'home' %}" class="text-[#494949] hover:text-[#15CDCB]">หน้าแรก</a>
+                            <img src="{% static 'image/home.png' %}" width="22" height="22" class="brightness-200">
+                            <a href="{% url 'home' %}" class="text-white hover:text-[#15CDCB]">หน้าแรก</a>
                         </div>
 
                         <div class="flex space-x-3">
-                            <img src="{% static 'image/doctor.png' %}" width="22" height="22">
-                            <a href="#" class="text-[#494949] hover:text-[#15CDCB]">ค้นหาแพทย์</a>
+                            <img src="{% static 'image/doctor.png' %}" width="22" height="22" class="brightness-200">
+                            <a href="#" class="text-white hover:text-[#15CDCB]">ค้นหาแพทย์</a>
                         </div>
         
                         <div class="flex space-x-3">
-                            <img src="{% static 'image/schedule.png' %}" width="22" height="22">
-                            <a href="#" class="text-[#494949] hover:text-[#15CDCB]">คิวพบแพทย์</a>
+                            <img src="{% static 'image/schedule.png' %}" width="22" height="22" class="brightness-200">
+                            <a href="#" class="text-white hover:text-[#15CDCB]">คิวพบแพทย์</a>
                         </div>
         
                         <div class="flex space-x-3">
-                            <img src="{% static 'image/plus.png' %}" width="22" height="22">
-                            <a href="{% url 'contact' %}" class="text-[#494949] hover:text-[#15CDCB]">ติดต่อเรา</a>
+                            <img src="{% static 'image/plus.png' %}" width="22" height="22" class="brightness-200">
+                            <a href="{% url 'contact' %}" class="text-white hover:text-[#15CDCB]">ติดต่อเรา</a>
                         </div>
 
                     </div>
@@ -50,7 +50,7 @@
             </div>
         </nav>
     {% else %}
-        <nav class="bg-white shadow-md">
+        <nav class="bg-white shadow-md fixed w-full">
             <div class="container-full mx-5 px-6 py-3 flex justify-between items-center ">
                 <div class="">
                     logo
