--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -8,37 +8,37 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{% static 'js/nav.js' %}"></script>
 </head>
 <body class="container-full h-screen w-screen overflow-x-hidden">
 
     {% block nav %}
-    {% if request.path == '/hopelife/' or request.path == '/hopelife/contact/' %}
-        <nav class="bg-transparent fixed w-full">
+    <nav class="nav-bg bg-transparent bg-white fixed w-full shadow-md">
             <div class="mx-5 px-6 py-3 flex justify-between items-center ">
-                <div class="text-white">
+                <div class="nav-text text-white text-[#494949]">
                     logo
                 </div>
                 <div class="flex space-x-9">
                     <div class="flex items-center space-x-9">
 
                         <div class="flex space-x-3 ">
-                            <img src="{% static 'image/home.png' %}" width="22" height="22" class="brightness-200">
-                            <a href="{% url 'home' %}" class="text-white hover:text-[#15CDCB]">หน้าแรก</a>
+                            <img src="{% static 'image/home.png' %}" width="22" height="22" class="nav-icon brightness-200">
+                            <a href="{% url 'main:home' %}" class="nav-text text-white text-[#494949] hover:text-[#15CDCB]">หน้าแรก</a>
                         </div>
 
                         <div class="flex space-x-3">
-                            <img src="{% static 'image/doctor.png' %}" width="22" height="22" class="brightness-200">
-                            <a href="#" class="text-white hover:text-[#15CDCB]">ค้นหาแพทย์</a>
+                            <img src="{% static 'image/doctor.png' %}" width="22" height="22" class="nav-icon brightness-200">
+                            <a href="{% url 'appoint:doctor-list' %}" class="nav-text text-white text-[#494949] hover:text-[#15CDCB]">ค้นหาแพทย์</a>
                         </div>
         
                         <div class="flex space-x-3">
-                            <img src="{% static 'image/schedule.png' %}" width="22" height="22" class="brightness-200">
-                            <a href="#" class="text-white hover:text-[#15CDCB]">คิวพบแพทย์</a>
+                            <img src="{% static 'image/schedule.png' %}" width="22" height="22" class="nav-icon brightness-200">
+                            <a href="{% url 'appoint:appoint-today' %}" class="nav-text text-white text-[#494949] hover:text-[#15CDCB]">คิวพบแพทย์</a>
                         </div>
         
                         <div class="flex space-x-3">
-                            <img src="{% static 'image/plus.png' %}" width="22" height="22" class="brightness-200">
-                            <a href="{% url 'contact' %}" class="text-white hover:text-[#15CDCB]">ติดต่อเรา</a>
+                            <img src="{% static 'image/plus.png' %}" width="22" height="22" class="nav-icon brightness-200">
+                            <a href="{% url 'main:contact' %}" class="nav-text text-white text-[#494949] hover:text-[#15CDCB]">ติดต่อเรา</a>
                         </div>
 
                     </div>
@@ -49,44 +49,6 @@
                 </div>
             </div>
         </nav>
-    {% else %}
-        <nav class="bg-white shadow-md fixed w-full">
-            <div class="container-full mx-5 px-6 py-3 flex justify-between items-center ">
-                <div class="">
-                    logo
-                </div>
-                <div class="flex space-x-9">
-                    <div class="flex items-center space-x-9">
-
-                        <div class="flex space-x-3 ">
-                            <img src="{% static 'image/home.png' %}" width="22" height="22">
-                            <a href="{% url 'home' %}" class="text-[#494949] hover:text-[#15CDCB]">หน้าแรก</a>
-                        </div>
-
-                        <div class="flex space-x-3">
-                            <img src="{% static 'image/doctor.png' %}" width="22" height="22">
-                            <a href="#" class="text-[#494949] hover:text-[#15CDCB]">ค้นหาแพทย์</a>
-                        </div>
-        
-                        <div class="flex space-x-3">
-                            <img src="{% static 'image/schedule.png' %}" width="22" height="22">
-                            <a href="#" class="text-[#494949] hover:text-[#15CDCB]">คิวพบแพทย์</a>
-                        </div>
-        
-                        <div class="flex space-x-3">
-                            <img src="{% static 'image/plus.png' %}" width="22" height="22">
-                            <a href="{% url 'contact' %}" class="text-[#494949] hover:text-[#15CDCB]">ติดต่อเรา</a>
-                        </div>
-
-                    </div>
-                    <button class="flex space-x-4 text-base font-normal font-['Kanit'] px-6 py-3 rounded-full bg-gradient-to-r from-[#5280e2] to-[#15cdcb] hover:from-[#15CDCB] hover:to-[#15CDCB]">
-                        <img src="{% static 'image/user (3).png' %}" width="22" height="22">
-                        <p class="text-white">เข้าสู่ระบบ</p>
-                    </button>                
-                </div>
-            </div>
-        </nav>
-    {% endif %}
     {% endblock %}
 
     {% block head %}
