--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -50,12 +50,13 @@
             </div>
         </nav>
     {% endblock %}
-
+    <div class="head pt-[73px]">
     {% block head %}
     {% endblock %}
     
     {% block content %}
     {% endblock %}
+    </div>
 
 </body>
 </html>
