--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="{% static 'js/nav.js' %}"></script>
+</head>
 <body class="container-full h-screen w-screen overflow-x-hidden">
 
     {% block nav %}
