--- a/minihospital/appoint/templates/appointment-today.html
+++ b/minihospital/appoint/templates/appointment-today.html
@@ -24,29 +24,47 @@
     </div>
 
     <div class="container">
-        <div class="mt-6 grid grid-cols-3 gap-6">
+        <div class="mt-6 grid grid-cols-3 gap-6 border border-black">
             <!-- Doctor card (repeat this block for each doctor card) -->
             {% for i in doctor_list %}
-            <div class="relative w-[408px] h-[278px] bg-white rounded-[20px] shadow-md">
-                <img class="absolute w-[203px] h-[203px]" src="{% static 'image/doctor1.png' %}" />
-                <div class="text-center text-[#3d5279] text-xl font-medium font-['Kanit'] leading-[55px]">นพ. มิจิ จามจาม</div>
-                <div class="text-center text-[#494949] text-base font-normal font-['Kanit'] leading-[55px]">พุธ - ศุกร์</div>
-                <div class="text-center text-[#494949] text-lg font-normal font-['Kanit'] leading-[55px]">10:00 - 16:00 น.</div>
+            <div class="relative w-[408px] h-auto bg-white rounded-[20px] shadow-md border border-black flex flex-col justify-between p-5">
+                <img class="absolute -top-[30px] left-[0px]" width="203" height="203" src="{% static 'image/doctor1.png' %}" />
 
-                <div class="w-[76px] h-[29px] bg-[#6ed554] rounded-[50px]">
-                    <div class="text-center text-white text-base font-normal font-['Kanit'] leading-[55px]">ว่าง</div>
+                <div class="flex">
+                    <!-- ปรับขนาดของ img โดยตั้ง width ตายตัว -->
+                    <div class="w-[180px] h-auto"></div>
+                
+                    <!-- ปรับขนาดของ div ให้ใหญ่ขึ้นกว่าภาพ -->
+                    <div class="flex-grow">
+                        
+                        <div class="text-left text-[#3d5279] text-xl font-semibold">นพ. มิจิ จามจาม</div>
+                        
+                        <!-- ปรับขนาดของ 'ตา หู คอ จมูก' และชิดซ้าย -->
+                        <div class="bg-[#d2e0ff] rounded-[30px] text-left text-[#6986c4] text-base font-normal py-1 px-6 inline-block">
+                            ตา หู คอ จมูก
+                        </div>
+                        
+                        <div class="text-left text-[#494949] text-base font-normal">พุธ - ศุกร์</div>
+                        <div class="text-left text-[#494949] text-lg font-normal">10:00 - 16:00 น.</div>
+                        <div class="text-left text-[#c7c7c7] text-base font-normal inline-block">สถานะ :</div>
+                        
+                        <!-- ปุ่มว่าง (ไม่ต้องชิดซ้ายเพราะต้องการให้ตรงกลาง) -->
+                        <div class="w-[76px] h-[29px] bg-[#6ed554] rounded-[50px] text-center text-white text-base font-normal">
+                            ว่าง
+                        </div>
+                    </div>
+                    
                 </div>
-
-                <div class="w-[372px] h-[55px]">
-                  <div class="w-[372px] h-[50px] bg-gradient-to-r from-[#5280e2] to-[#15cdcb] rounded-[50px]"></div>
-                  <div class="w-[133px] h-[55px] text-center text-white text-xl font-medium font-['Kanit'] leading-[55px]">จองคิวพบแพทย์</div>
-                </div>
-                <div class="text-center text-[#c7c7c7] text-base font-normal font-['Kanit'] leading-[55px]">สถานะ :</div>
-                <div class="w-[125px] h-[66.68px]">
-                  <div class="w-[125px] h-[33px] bg-[#d2e0ff] rounded-[30px]"></div>
-                  <div class="w-[89.58px] h-[66.68px] text-center text-[#6986c4] text-base font-normal font-['Kanit'] leading-[55px]">ตา หู คอ จมูก </div>
+                
+            
+                <!-- Button goes here, placed in a separate block under the details -->
+                <div class="w-full mt-4">
+                    <button class="w-full h-[50px] bg-gradient-to-r from-[#5280e2] to-[#15cdcb] rounded-[50px] text-center text-white text-xl font-medium">
+                        จองคิวพบแพทย์
+                    </button>
                 </div>
             </div>
+            
             {% comment %} <div class="bg-white p-4 rounded shadow">
                 <img src="{% static 'image/doctor1.png' %}" alt="Doctor" class="w-full h-40 object-cover rounded mb-4">
                 <h2 class="text-xl font-bold">นพ. มิธี จานาบาน</h2>
