--- a/minihospital/main/templates/contact.html
+++ b/minihospital/main/templates/contact.html
@@ -14,7 +14,7 @@
 
         <p class="text-center text-[#3E5279] text-[48px] font-semibold">ติดต่อเรา</p>
 
-        <div class=" relative grid grid-cols-2 gap-4 m-6 py-[50px] px-[60px] w-[60%] shadow-xl flex justify-center items-start rounded-[20px]">
+        <div class=" relative grid grid-cols-2 gap-4 m-6 py-[50px] px-[60px] w-[60%] shadow-box flex justify-center items-start rounded-[20px]">
             <img src="{% static 'image/Doctor Consultation.png'%}" width="378" height="378" class="absolute top-[-150px] left-[-200px]">
             <img src="{% static 'image/Heart Care.png'%}" width="214.76" height="214.76" class="absolute rotate-[8.16deg] bottom-[-100px] right-[-100px]">
 
