--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -13,7 +13,7 @@
 <body class="container-full h-screen w-screen overflow-x-hidden">
 
     {% block nav %}
-    <nav class="nav-bg bg-transparent bg-white fixed w-full shadow-md">
+    <nav class="z-[100] nav-bg bg-transparent bg-white fixed w-full shadow-md">
             <div class="mx-5 px-6 py-3 flex justify-between items-center ">
                 <div class="nav-text text-white text-[#494949]">
                     logo
