--- a/minihospital/authen/templates/login.html
+++ b/minihospital/authen/templates/login.html
@@ -29,18 +29,19 @@
             </div>
     
             <div class="">
-                <form action="">
-                    <div class="mb-4">
-                        <input type="text" class="bg-[#EAEAEA] rounded-[50px] pl-10 w-[618px] h-[65px] border-none outline-none" id="username" name="username" placeholder="กรอกรหัสผู้ป่วย" required>
+                <form method="post" action="{% url 'authen:login' %}">
+
+                    <div class="mb-4 bg-[#EAEAEA] rounded-[50px] flex items-center pl-10 w-[618px] h-[65px] border-none outline-none">
+                        {{ form.personalID }}
                     </div>
-                    <div class="">
-                        <input type="text" class="bg-[#EAEAEA] rounded-[50px] pl-10 w-[618px] h-[65px] border-none outline-none" id="username" name="username" placeholder="กรอกรหัสผ่าน" required>
+                    <div class="bg-[#EAEAEA] rounded-[50px] flex items-center pl-10 w-[618px] h-[65px] border-none outline-none">
+                        {{ form.password }}
                     </div>
                 </form>
             </div>
 
             <div>
-                <button class="flex items-center justify-center mt-10 text-base text-white font-normal font-['Kanit'] w-[618px] h-[65px] rounded-full bg-gradient-to-r from-[#5280e2] to-[#15cdcb] hover:from-[#15CDCB] hover:to-[#15CDCB] hover:scale-[0.98] transition-opacity transition-transform duration-500 ease-in-out">
+                <button type="submit" class="flex items-center justify-center mt-10 text-base text-white font-normal font-['Kanit'] w-[618px] h-[65px] rounded-full bg-gradient-to-r from-[#5280e2] to-[#15cdcb] hover:from-[#15CDCB] hover:to-[#15CDCB] hover:scale-[0.98] transition-opacity transition-transform duration-500 ease-in-out">
                     <span class="">เริ่มต้นการใช้งาน</span>
                     <svg class="w-4 h-4 ml-1 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7"></path>
