--- a/minihospital/main/templates/home.html
+++ b/minihospital/main/templates/home.html
@@ -19,7 +19,7 @@
 
     /* Background image settings */
     /* body {
-        background-image: url("{% static 'image/hospital-hallway-with-motion-effect 1.png'%}"); /* Replace with your image URL */
+        background-image: url("{% static 'image/hospital-hallway-with-motion-effect 1.png'%}");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
