--- a/minihospital/appoint/templates/appointment-today.html
+++ b/minihospital/appoint/templates/appointment-today.html
@@ -11,7 +11,7 @@
     <div class="container pl-10 pt-10 flex justify-between items-center">
         <div class="flex justify-center items-end space-x-10">
             <p class="text-[48px] font-semibold text-[#3E5279]">คิวพบแพทย์</p>
-            <p class="text-[20px] text-[#494949] mb-[10px] ">วันที่ {{ today|date:"d/m/Y" }}</p>
+            <p class="text-[20px] text-[#494949] mb-[10px] ">วันที่ {{ today }}</p>
         </div>
         <div class="flex space-x-5 justify-center items-center">
             <div class="relative w-[400px]">
@@ -27,84 +27,85 @@
     <div class="container flex flex-col px-10 py-5">
         <p class="text-[#909090]">รายชื่อแพทย์ที่ประจำการอยู่ ณ ตอนนี้</p>
         <div class="flex space-x-5 py-4">
-            <div class="hover:scale-110 hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#15CDCB] rounded-[50px] inline-flex items-center px-5 py-2 cursor-pointer ">
+            <a href="?department=ทั้งหมด" class="hover:scale-110 hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#15CDCB] rounded-[50px] inline-flex items-center px-5 py-2 cursor-pointer ">
                 <div class="text-center text-white text-base font-normal">ทั้งหมด</div>
-            </div>
+            </a>
 
-            <div id="cat1" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
+            <a href="?department=กระดูก" id="cat1" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
                 <img id="img1" src="{% static 'image/bone.png' %}" width="22" height="22" class="">
                 <div class="text-center text-base font-normal">กระดูก</div>
-            </div>
+            </a>
 
-            <div id="cat2" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
+            <a href="?department=เด็ก" id="cat2" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
                 <img id="img2" src="{% static 'image/baby-boy.png' %}" width="22" height="22" class="">
                 <div class="text-center text-base font-normal">เด็ก</div>
-            </div>
+            </a>
 
-            <div id="cat3" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
+            <a href="?department=หู ตา คอ จมูก" id="cat3" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
                 <img id="img3" src="{% static 'image/visible.png' %}" width="22" height="22" class="">
                 <div class="text-center text-base font-normal">ตา หู คอ จมูก</div>
-            </div>
+            </a>
 
-            <div id="cat4" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
+            <a href="?department=ผิวหนัง" id="cat4" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
                 <img id="img4" src="{% static 'image/hand.png' %}" width="22" height="22" class="">
                 <div class="text-center text-base font-normal">ผิวหนัง</div>
-            </div>
+            </a>
 
-            <div id="cat5" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
+            <a href="?department=โรคทั่วไป" id="cat5" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
                 <img id="img5" src="{% static 'image/stethoscope.png' %}" width="22" height="22" class="">
                 <div class="text-center text-base font-normal">โรคทั่วไป</div>
-            </div>
+            </a>
 
-            <div id="cat6" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
+            <a href="?department=ผู้หญิง" id="cat6" class="hover:scale-110 text-[#909090] hover:text-white duration-300 transition ease-in-out delay-150 hover:bg-[#15CDCB] bg-[#efefef] rounded-[50px] inline-flex items-center space-x-3 px-4 py-2 cursor-pointer">
                 <img id="img6" src="{% static 'image/female.png' %}" width="22" height="22" class="">
                 <div class="text-center text-base font-normal">ผู้หญิง</div>
-            </div>
+            </a>
         </div>
     </div>
 
     <div class="w-full flex flex-col justify-center items-center">
         <div class="mt-6 grid grid-cols-3 grid-rows-3 gap-10">
-            <!-- Doctor card (repeat this block for each doctor card) -->
-            {% for i in doctor_list %}
-            <div class="hover:scale-110 duration-300 transition ease-in-out delay-150 shadow-box relative w-[408px] h-auto bg-white rounded-[20px] flex flex-col justify-between p-5">
-                <img class="absolute -top-[15px] left-[0px]" width="203" height="203" src="{% static 'image/doctor1.png' %}" />
 
-                <div class="flex">
-                    <!-- ปรับขนาดของ img โดยตั้ง width ตายตัว -->
-                    <div class="w-[180px] h-auto"></div>
-                
-                    <!-- ปรับขนาดของ div ให้ใหญ่ขึ้นกว่าภาพ -->
-                    <div class="flex-grow">
+            {% for doc in doctor_list %}
+                {% if today_day in doc.day %}
+                    <div class="hover:scale-110 duration-300 transition ease-in-out delay-150 shadow-box relative w-[408px] h-auto bg-white rounded-[20px] flex flex-col justify-between p-5">
+                        <img class="absolute -top-[15px] left-[0px]" width="203" height="203" src="{{ doc.doctor_image.url }}" />
+
+                        <div class="flex">
+                            <!-- ปรับขนาดของ img โดยตั้ง width ตายตัว -->
+                            <div class="w-[180px] h-auto"></div>
                         
-                        <div class="text-left text-[#3d5279] text-xl font-semibold">นพ. มิจิ จามจาม</div>
-                        
-                        <!-- ปรับขนาดของ 'ตา หู คอ จมูก' และชิดซ้าย -->
-                        <div class="bg-[#d2e0ff] rounded-[30px] mt-3 mb-4 text-left text-[#6986c4] text-base font-normal py-1 px-5 inline-block">
-                            ตา หู คอ จมูก
+                            <!-- ปรับขนาดของ div ให้ใหญ่ขึ้นกว่าภาพ -->
+                            <div class="flex-grow">
+                                
+                                <div class="text-left text-[#3d5279] text-xl font-semibold">{{ doc.prefix }} {{ doc.user.first_name }} {{ doc.user.last_name }}</div>
+                                
+                                <!-- ปรับขนาดของ 'ตา หู คอ จมูก' และชิดซ้าย -->
+                                <div class="bg-[#d2e0ff] rounded-[30px] mt-3 mb-4 text-left text-[#6986c4] text-base font-normal py-1 px-5 inline-block">
+                                    {{ doc.department }}
+                                </div>
+                                
+                                <div class="text-left text-[#494949] text-[18px] font-normal leading-tight">{{ doc.start_time }} - {{ doc.end_time }} น.</div>
+                                <div class="text-left text-[#494949] text-[16px] font-normal leading-tight">{{ doc.shift_day }}</div>
+                                <div class="flex items-center mt-3 space-x-4">
+                                    <div class="text-left text-[#c7c7c7] text-base font-normal">สถานะ :</div>
+                                    <div class="bg-[#6ed554] px-5 py-1 rounded-[50px] text-center text-white text-base font-normal">ว่าง</div>
+                                </div>
+                            </div>
+                            
                         </div>
                         
-                        <div class="text-left text-[#494949] text-[18px] font-normal leading-tight">10:00 - 16:00 น.</div>
-                        <div class="text-left text-[#494949] text-[16px] font-normal leading-tight">พุธ - ศุกร์</div>
-                        <div class="flex items-center mt-3 space-x-4">
-                            <div class="text-left text-[#c7c7c7] text-base font-normal">สถานะ :</div>
-                            <div class="bg-[#6ed554] px-5 py-1 rounded-[50px] text-center text-white text-base font-normal">ว่าง</div>
+                    
+                        <!-- Button goes here, placed in a separate block under the details -->
+                        <div class="w-full mt-4 flex justify-center items-center">
+                            <a href="{% url 'appoint:appointment' doc.id %}" class="hover:from-[#15CDCB] hover:to-[#15CDCB] cursor-pointer duration-300 transition ease-in-out delay-150 w-[90%] py-3 bg-gradient-to-r from-[#5280e2] to-[#15cdcb] rounded-[50px] text-center text-white text-xl font-medium">
+                                จองคิวพบแพทย์
+                            </a>
                         </div>
                     </div>
-                    
-                </div>
-                
-            
-                <!-- Button goes here, placed in a separate block under the details -->
-                <div class="w-full mt-4 flex justify-center">
-                    <button class="hover:from-[#15CDCB] hover:to-[#15CDCB] cursor-pointer duration-300 transition ease-in-out delay-150 w-[90%] h-[50px] bg-gradient-to-r from-[#5280e2] to-[#15cdcb] rounded-[50px] text-center text-white text-xl font-medium">
-                        จองคิวพบแพทย์
-                    </button>
-                </div>
-            </div>
-            
-
+                {% endif %}
             {% endfor %}
+            
         </div>
 
         <div class="flex p-5 space-x-6 justify-center items-center m-7">
